--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
 }
 
 code {
@@ -13,16 +14,36 @@ code {
 }
 .form {
   text-align: center;
+  width: 75%;
+  border: solid lightblue 2px;
+  border-radius: 15px;
+  margin: auto;
+  padding: 0px 20px 20px 20px;
+}
+h5 {
+  margin: 10px;
 }
 input {
   display: block;
-  margin: auto;
+  margin: 10px auto;
 }
 button {
   display: block;
-  margin: auto;
+  margin: 0px auto 10px auto;
   background-color: lightblue;
   color: black;
   border: solid black 1px;
+  border-radius: 5px;
   padding: 10px;
+}
+.buttons {
+  padding: 10px;
+  width: 75%;
+  margin: auto;
+}
+#next {
+  float: right;
+}
+#back {
+  float: left;
 }
