--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
@@ -35,6 +33,9 @@ button {
   border: solid black 1px;
   border-radius: 5px;
   padding: 10px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+
 }
 .buttons {
   padding: 10px;
@@ -47,3 +48,9 @@ button {
 #back {
   float: left;
 }
+
+h1 {
+  font-family: 'Montserrat', sans-serif;
+}
+
+
