--- a/src/index.css
+++ b/src/index.css
@@ -10,15 +10,28 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-.form {
-  text-align: center;
-  width: 75%;
-  border: solid lightblue 2px;
-  border-radius: 15px;
+.form-wrapper {
+  background: linear-gradient(lightblue, purple);
+  width: 60%;
   margin: auto;
-  padding: 0px 20px 20px 20px;
+  padding: 5px;
+  border-radius: 15px;
+  box-shadow: 10px 10px 20px -15px rgba(0, 0, 0, 0.75);
+}
+.form {
+  background: white;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  padding: 10px 0px;
+  border-radius: 15px;
 }
 h5 {
+  margin-top: 0px;
+  margin-bottom: 10px;
+}
+label {
   margin: 10px;
 }
 input {
@@ -30,16 +43,17 @@ button {
   margin: 0px auto 10px auto;
   background-color: lightblue;
   color: black;
-  border: solid black 1px;
+  border: solid white 1px;
   border-radius: 5px;
   padding: 10px;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
+  box-shadow: 10px 10px 20px -10px rgba(0, 0, 0, 0.75);
 
 }
 .buttons {
   padding: 10px;
-  width: 75%;
+  width: 60%;
   margin: auto;
 }
 #next {
