--- a/src/index.css
+++ b/src/index.css
@@ -49,8 +49,12 @@ button {
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   box-shadow: 10px 10px 20px -10px rgba(0, 0, 0, 0.75);
-
 }
+
+button:hover {
+  border: solid lightblue 1px;
+}
+
 .buttons {
   padding: 10px;
   width: 60%;
@@ -65,6 +69,24 @@ button {
 
 h1 {
   font-family: 'Montserrat', sans-serif;
+}
+
+@media only screen and (max-width: 768px) {
+  .form-wrapper {
+    width: 75%;
+  }
+  .buttons {
+    width: 75%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .form-wrapper {
+    width: 90%;
+  }
+  .buttons {
+    width: 90%;
+  }
 }
 
 
